# oppia-android

.github/workflows/: build_tests.yml  code_coverage.yml  main.yml  static_checks.yml  unit_tests.yml  wiki.yml
app/: BUILD.bazel
app/src/main/java/org/oppia/android/app/home/: HomeActivity.kt  HomeFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/home/promotedlist/: PromotedStoryViewModel.kt
app/src/main/java/org/oppia/android/app/home/topiclist/: AllTopicListView.kt  TopicSummaryViewModel.kt
app/src/main/java/org/oppia/android/app/options/: ReadingTextSizeFragmentPresenter.kt  TextSizeItemViewModel.kt
app/src/main/java/org/oppia/android/app/parser/: BUILD.bazel
app/src/main/java/org/oppia/android/app/player/exploration/: ExplorationFragmentPresenter.kt  ExplorationManagerFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/player/state/: StateFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/player/state/itemviewmodel/: DragAndDropSortInteractionViewModel.kt  DragDropInteractionContentViewModel.kt
app/src/main/java/org/oppia/android/app/shim/: ViewBindingShim.kt  ViewBindingShimImpl.kt
app/src/main/java/org/oppia/android/app/splash/: BUILD.bazel
app/src/main/java/org/oppia/android/app/topic/conceptcard/: ConceptCardFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/topic/revisioncard/: RevisionCardFragmentPresenter.kt
app/src/main/java/org/oppia/android/app/view/: ViewComponentImpl.kt
app/src/main/res/drawable/: rounded_button_blue_chip.xml  rounded_button_white_chip.xml  topic_top_blue_chip.xml
app/src/main/res/layout/: all_topics.xml  all_topics_list.xml  home_fragment.xml  promoted_story_card.xml  topic_summary_view.xml
app/src/main/res/values/: strings.xml
app/src/sharedTest/java/org/oppia/android/app/home/: BUILD.bazel
app/src/test/java/org/oppia/android/app/parser/: BUILD.bazel
coverage_reports/: CoverageReport.md
coverage_reports/[app/src/main/java/org/oppia/android/app/activity/ActivityComponent/: coverage.html
coverage_reports/app/src/main/java/org/oppia/android/app/activity/ActivityComponent/: coverage.html  coverage.md
coverage_reports/domain/src/main/java/org/oppia/android/domain/auth/AuthenticationModule/: coverage.md
coverage_reports/domain/src/main/java/org/oppia/android/domain/auth/FirebaseAuthWrapperImpl/: coverage.html  coverage.md
coverage_reports/domain/src/main/java/org/oppia/android/domain/locale/LanguageConfigRetriever/: coverage.md
coverage_reports/scripts/src/java/org/oppia/android/scripts/testfile/TestFileCheck/: coverage.md
coverage_reports/scripts/src/java/org/oppia/android/scripts/testing/TestGitRepository/: coverage.md
coverage_reports/scripts/src/java/org/oppia/android/scripts/todo/TodoOpenCheck/: coverage.md
coverage_reports/scripts/src/java/org/oppia/android/scripts/xml/XmlSyntaxCheck/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/data/DataProviders/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/locale/AndroidLocaleFactory/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/locale/AndroidLocaleProfile/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/locale/OppiaBidiFormatterImpl/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/logging/ConsoleLogger/: coverage.html  coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/ComparableOperationExtensions/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/ComparatorExtensions/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/ExpressionToComparableOperationConverter/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/ExpressionToLatexConverter/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/ExpressionToPolynomialConverter/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/FractionParser/: coverage.md
coverage_reports/utility/src/main/java/org/oppia/android/util/math/MathExpressionParser/: coverage.md
domain/src/main/assets/: GJ2rLXRKD5hw.json  omzF4oqgeTXd.json  test_topic_id_0.json  test_topic_id_1.json  test_topic_id_2.json  wANbh4oOClga.json
domain/src/main/java/org/oppia/android/domain/profile/: ProfileManagementController.kt
domain/src/main/java/org/oppia/android/domain/topic/: TopicController.kt  TopicListController.kt
domain/src/test/java/org/oppia/android/domain/classify/: BUILD.bazel
domain/src/test/java/org/oppia/android/domain/classify/rules/imageClickInput/: BUILD.bazel
domain/src/test/java/org/oppia/android/domain/classify/rules/multiplechoiceinput/: BUILD.bazel
domain/src/test/java/org/oppia/android/domain/classify/rules/numericexpressioninput/: BUILD.bazel
model/src/main/proto/: topic.proto
scripts/: pre-commit.sh
scripts/assets/: test_file_exemptions.textproto
scripts/src/java/org/oppia/android/scripts/ci/: ComputeAffectedTests.kt
scripts/src/java/org/oppia/android/scripts/common/: GitClient.kt
scripts/src/java/org/oppia/android/scripts/coverage/: BUILD.bazel  RunCoverage.kt
scripts/src/java/org/oppia/android/scripts/coverage/reporter/: BUILD.bazel
scripts/src/java/org/oppia/android/scripts/demo/: AddNumbers.kt  BUILD.bazel
scripts/src/java/org/oppia/android/scripts/proto/: coverage.proto  script_exemptions.proto
scripts/src/java/org/oppia/android/scripts/testfile/: TestFileCheck.kt
scripts/src/java/org/oppia/android/scripts/wiki/: WikiTableOfContentsCheck.kt
scripts/src/javatests/org/oppia/android/scripts/coverage/: BUILD.bazel  RunCoverageTest.kt
scripts/src/javatests/org/oppia/android/scripts/coverage/reporter/: BUILD.bazel
scripts/src/javatests/org/oppia/android/scripts/demo/: AddNumbersTest.kt  BUILD.bazel
wiki/: Bazel-Setup-Instructions-for-Windows.md  Guidance-on-submitting-a-PR.md  Interpreting-CI-Results.md  Oppia-Android-Code-Coverage.md  Writing-tests-with-good-behavioral-coverage.md
(+19 files in other folders)
