load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "AddNumbersTest",
    srcs = ["AddNumbersTest.kt"],
    deps = [
        "//scripts/src/java/org/oppia/android/scripts/demo:add_numbers",
        "//testing:assertion_helpers",
        "//third_party:com_google_truth_truth",
        "//third_party:org_jetbrains_kotlin_kotlin-test-junit",
    ],
)
