"""
Constructs for setting up spotlights.
"""

load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")

genrule(
    name = "update_SplashActivity",
    srcs = ["SplashActivity.kt"],
    outs = ["SplashActivity_updated.kt"],
    cmd = """
    cat $(SRCS) |
    sed 's/import org.oppia.android.R/import org.oppia.android.app.R/g' |
    sed 's/import org.oppia.android.databinding./import org.oppia.android.app.databinding.databinding./g' > $(OUTS)
    """,
    visibility = ["//app:app_visibility"],
)

genrule(
    name = "update_SplashActivityPresenter",
    srcs = ["SplashActivityPresenter.kt"],
    outs = ["SplashActivityPresenter_updated.kt"],
    cmd = """
    cat $(SRCS) |
    sed 's/import org.oppia.android.R/import org.oppia.android.app.R/g' |
    sed 's/import org.oppia.android.databinding./import org.oppia.android.app.databinding.databinding./g' > $(OUTS)
    """,
    visibility = ["//app:app_visibility"],
)

#kt_android_library(
#    name = "splash_activity",
#    srcs = [
#        "SplashActivity.kt",
#    ],
#    visibility = ["//app:app_visibility"],
#    deps = [
#        "//model/src/main/proto:spotlight_java_proto_lite",
#        "//third_party:androidx_appcompat_appcompat",
#        "//third_party:androidx_databinding_databinding-common",
#        "//third_party:androidx_databinding_databinding-runtime",
#        ],
#)

#kt_android_library(
#    name = "splash_activity_presenter",
#    srcs = [
#        "SplashActivityPresenter.kt",
#    ],
#    visibility = ["//app:app_visibility"],
#    deps = [
#        "//model/src/main/proto:spotlight_java_proto_lite",
#        "//third_party:androidx_appcompat_appcompat",
#        "//app/src/main/java/org/oppia/android/app/activity:activity_scope",
#        "//app/src/main/java/org/oppia/android/app/fragment:fragment_scope",
#        "src/main/java/org/oppia/android/app/customview/ChapterNotStartedContainerConstraintLayout.kt",
#        "src/main/java/org/oppia/android/app/customview/ContinueButtonView.kt",
#        "src/main/java/org/oppia/android/app/customview/LessonThumbnailImageView.kt",
#        "src/main/java/org/oppia/android/app/customview/PromotedStoryCardView.kt",
#        "src/main/java/org/oppia/android/app/customview/SegmentedCircularProgressView.kt",
#        "src/main/java/org/oppia/android/app/customview/SurveyOnboardingBackgroundView.kt",
#        "src/main/java/org/oppia/android/app/customview/VerticalDashedLineView.kt",
#        "src/main/java/org/oppia/android/app/survey/SurveyMultipleChoiceOptionView.kt",
#        "src/main/java/org/oppia/android/app/survey/SurveyNpsItemOptionView.kt",
#        "src/main/java/org/oppia/android/app/utility/ClickableAreasImage.kt",
#        "//third_party:androidx_databinding_databinding-common",
#        "//third_party:androidx_databinding_databinding-runtime",
#        ],
#)
