load("@io_bazel_rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("//domain:domain_assets.bzl", "generate_assets_list_from_text_protos")
load("//domain:domain_test.bzl", "domain_test")

kt_android_library(
    name = "interaction_object_test_builder",
    testonly = True,
    visibility = ["//visibility:public"],
    srcs = [
        "InteractionObjectTestBuilder.kt",
    ],
    deps = [
        "//model/src/main/proto:question_java_proto_lite",
    ],
)