"""
Tests for multiple choice input classifiers.
"""

load("//:oppia_android_test.bzl", "oppia_android_test")

oppia_android_test(
    name = "MultipleChoiceInputEqualsRuleClassifierProviderTest",
    srcs = ["MultipleChoiceInputEqualsRuleClassifierProviderTest.kt"],
    custom_package = "org.oppia.android.domain.classify.rules.multiplechoiceinput",
    test_class = "org.oppia.android.domain.classify.rules.multiplechoiceinput.MultipleChoiceInputEqualsRuleClassifierProviderTest",
    test_manifest = "//domain:test_manifest",
    deps = [
        "//:dagger",
        "//domain",
        "//domain/src/test/java/org/oppia/android/domain/classify:interaction_object_test_builder",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/multiplechoiceinput:multiple_choice_input_providers",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_runner",
        "//testing:assertion_helpers",
        "//third_party:org_jetbrains_kotlin_kotlin-test-junit",
        "//model/src/main/proto:interaction_object_java_proto_lite",
        "//testing/src/main/java/org/oppia/android/testing/junit:oppia_parameterized_test_runner",
        "//testing/src/main/java/org/oppia/android/testing/junit:parameterized_robolectric_test_runner",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_test_core",
        "//third_party:com_google_truth_truth",
        "//third_party:junit_junit",
        "//third_party:org_robolectric_robolectric",
        "//third_party:robolectric_android-all",
        "//utility/src/main/java/org/oppia/android/util/locale:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
    ],
)